# ei-vo

./: README.md  pyproject.toml  requirements.txt
ei-vo/: __init__.py
ei-vo/render/: render_mj.py
ei/core/: core.py
ei/render/: __init__.py  play.py  render_mj.py
ei_vo/: __init__.py
ei_vo/core/: __init__.py  angles.py  interpolation.py  recording.py
ei_vo/render/: __init__.py  play.py  pose_viewer.py  render_mj.py
examples/: README.md  demo_mj.py  inspect_pose.py
examples/models/: simple_panda.xml  three_dof_arm.xml
examples/trajectories/: three_dof_arm_waypoints.csv
tests/: test_demo_mj.py  test_render_recording.py
tests/models/: three_dof_arm.xml
