[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ei"
version = "0.0.1"
description = "visualize library"

license = {text = "MIT License"}
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]